# SimpleCV

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  SimpleCVConfig.h.in
CLI/: CMakeLists.txt  SimpleCVConfig.h  main.cpp
Core/: CMakeLists.txt  Image.cpp  Image.h
IO/: CMakeLists.txt  PNGCommon.h  PNGLoader.cpp  PNGLoader.h  PNGWriter.cpp  PNGWriter.h
Test/: CMakeLists.txt
Test/Core/: ImageTest.cpp
Test/IO/: WriteTest.cpp
